--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "RectSurviveMain.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./RectSurviveMain.js"
+    "dev": "nodemon ./RectSurviveMain.js",
+    "tail": "postcss ./Core/TailwindCSS/main.css -o ./Public/style.css"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,12 @@
   "homepage": "https://github.com/Alen1337/RectSurvive#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "express-ws": "^5.0.2"
+    "express-ws": "^5.0.2",
+    "postcss-cli": "^10.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
